--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,23 @@
   margin-bottom: 1rem;
   color: #212529;
 }
-.container{
+
+.container {
   max-width: 960px !important;
 }
+
+/* small li {
+  list-style: none;
+  margin-top: 10px;
+}
+
+.unOrder-list {
+  padding: 0;
+} */
+.black {
+  color: aqua;
+}
+
 /* input[type=text] {
   width: 100%;
   box-sizing: border-box;
